--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/google-logo.png
-  #   - images/a_dot_ham.jpeg
+     - assets/images/apple-logo.png
+     - assets/images/facebook-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
