--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^6.1.5
   appwrite: ^11.0.0
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
