--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   appwrite: ^11.0.0
   cached_network_image: ^3.3.0
   location: ^5.0.3
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
