--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,6 +7,10 @@
 	<key>CFBundleDisplayName</key>
 	<string>Ullamki</string>
 	<key>CFBundleExecutable</key>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs access to location when open.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>This app needs access to location when in the background.</string>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
