--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geocoding: ^2.1.1
   flutter_map_location_marker: ^7.0.5
   geolocator: ^10.1.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
